Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14928

Global search does not check validity of regexps entered in regexp mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.3.0-beta1
    • Qt Creator 3.5.0-rc1
    • All Other Issues
    • None
    • Linux

      • Open project
      • Open search by Ctrl+Shift F
      • Choose regexp mode
      • Enter: "tr("
      • Press search

      Note warnings:

      QRegularExpressionPrivate::doMatch(): called on an invalid QRegularExpression object "tr("
      

      on the console, but no error is displayed in the UI.

        For Gerrit Dashboard: QTCREATORBUG-14928
        # Subject Branch Project Status CR V

            con Eike Ziller
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes