Advanced Find: Check regular expressions for validity

If regular expression flag is enabled, check the search term for a valid
expression and disable searching in case it is not.

Uses QRegularExpression (Perl-compatible) which is used by all the
existing searches.

Task-number: QTCREATORBUG-14928
Change-Id: I37d536d8d0ac190de486790aca87616e9b320eb1
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>